# wetwire-gitlab-python

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ADOPTION.md  AUTO_DEVOPS.md  CLI.md  CODEGEN.md  DEVELOPERS.md  EXAMPLES.md  FAQ.md  GITLAB_COMPONENTS.md  IMPORT_WORKFLOW.md  INTERNALS.md  LINT_RULES.md  MCP_SERVER.md  PLAN.md  QUICK_START.md  ROADMAP.md  RUNNER_CONFIG.md  VERSIONING.md
examples/: README.md
examples/docker-build/: README.md  pyproject.toml
examples/docker-build/ci/: __init__.py  jobs.py  pipeline.py
examples/imported/: README.md
examples/imported/gitlab-nodejs-template/src/pipeline/: jobs.py
examples/imported/gitlab-python-template/: pyproject.toml
examples/imported/gitlab-python-template/src/pipeline/: jobs.py
examples/imported/gitlab-rust-template/src/pipeline/: jobs.py
examples/kubernetes-deploy/: README.md  pyproject.toml
examples/kubernetes-deploy/ci/: __init__.py  jobs.py  pipeline.py
examples/monorepo/: README.md  pyproject.toml
examples/monorepo/ci/: __init__.py  jobs.py  pipeline.py
examples/multi-stage/: README.md  pyproject.toml
examples/multi-stage/ci/: __init__.py  jobs.py  pipeline.py
examples/python-app/: README.md  pyproject.toml
examples/python-app/ci/: __init__.py  jobs.py  pipeline.py
scripts/: check-types.sh  ci.sh  dev-setup.sh
src/wetwire_gitlab/: agent.py  contracts.py  intrinsics.py  mcp_server.py
src/wetwire_gitlab/cli/: __init__.py  __main__.py  cli_utils.py  init.py  main.py  utils.py
src/wetwire_gitlab/cli/commands/: __init__.py  build.py  design.py  diff.py  graph.py  import_cmd.py  init.py  lint.py  list_cmd.py  test.py  validate.py  version.py
src/wetwire_gitlab/codegen/: __init__.py  fetch.py  generate.py  parse.py
src/wetwire_gitlab/components/: __init__.py  base.py  code_quality.py  container_scanning.py  coverage.py  dast.py  dependency_scanning.py  license_scanning.py  sast.py  secret_detection.py  terraform.py
src/wetwire_gitlab/discover/: __init__.py  scanner.py
src/wetwire_gitlab/importer/: __init__.py  codegen.py  ir.py  parser.py
src/wetwire_gitlab/kiro/: __init__.py  agent_config.json  config.py  installer.py
src/wetwire_gitlab/linter/: __init__.py  linter.py  rules.py
src/wetwire_gitlab/linter/rules/: __init__.py  base.py  file_rules.py  job_rules.py  pattern_rules.py  type_rules.py
src/wetwire_gitlab/pipeline/: __init__.py  artifacts.py  cache.py  default.py  image.py  include.py  job.py  pipeline.py  rules.py  trigger.py  variables.py  workflow.py
src/wetwire_gitlab/runner/: __init__.py  loader.py
src/wetwire_gitlab/runner_config/: __init__.py  cache.py  config.py  docker.py  executor.py  kubernetes.py  runner.py
src/wetwire_gitlab/serialize/: __init__.py  converter.py  yaml_builder.py
src/wetwire_gitlab/template/: __init__.py  ordering.py
src/wetwire_gitlab/templates/: __init__.py  auto_devops.py  jobs.py
src/wetwire_gitlab/testing/: __init__.py  semantic_compare.py
src/wetwire_gitlab/validation/: __init__.py  glab.py  schema.py
tests/: test_agent.py  test_build_command.py  test_cli.py  test_cli_utils.py  test_components.py  test_contracts.py  test_design_command.py  test_examples.py  test_generate.py  test_graph_command.py  test_import_command.py  test_importer.py  test_init_command.py  test_intrinsics.py  test_job_references.py  test_kiro.py  test_lint_command.py  test_linter.py  test_linter_autofix.py  test_list_command.py  test_mcp_server.py  test_parse.py  test_placeholder.py  test_reference_examples.py  test_runner.py  test_runner_config.py  test_template.py  test_test_command.py
tests/cli/: test_build_command.py  test_build_manifest.py  test_cli.py  test_cli_utils.py  test_core_commands_no_wetwire_core.py  test_design_command.py  test_diff_command.py  test_graph_command.py  test_init_command.py  test_lint_command.py  test_test_command.py  test_validate_command.py
tests/codegen/: test_fetch.py  test_generate.py
tests/components/: test_auto_devops.py  test_components.py  test_runner_config.py
tests/discover/: test_discover.py
tests/fixtures/templates/: 01_basic_job.yml  02_multi_stage.yml  03_with_variables.yml  04_with_artifacts.yml  05_with_cache.yml  06_with_rules.yml  07_with_needs.yml  08_with_image.yml  09_with_services.yml  10_with_includes.yml  11_with_environment.yml  12_with_parallel.yml  13_with_tags.yml  14_with_retry.yml  15_with_coverage.yml  16_with_allow_failure.yml  17_with_timeout.yml  18_with_dependencies.yml  19_with_trigger.yml  20_with_before_after_scripts.yml  21_python_project.yml  22_nodejs_project.yml  23_docker_project.yml  24_complex_needs.yml  25_with_interruptible.yml
tests/importer/: test_importer.py
tests/integration/: test_agent.py  test_examples.py  test_gitlab_templates.py  test_glab.py  test_job_references.py  test_kiro.py  test_kiro_refactor.py  test_mcp_server.py  test_reference_examples.py  test_semantic_equivalence.py  test_template_corpus.py
tests/linter/: test_linter.py  test_linter_additional_rules.py  test_linter_autofix.py
tests/pipeline/: test_contracts.py  test_intrinsics.py  test_intrinsics_images_services.py  test_pipeline.py  test_serialize.py  test_template.py
tests/runner/: test_runner.py
tests/validation/: test_schema.py
