[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wetwire-gitlab"
version = "0.1.0"
description = "GitLab integration for wetwire"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alex Artigues", email = "albert.a.artigues@gmail.com" }
]
keywords = ["gitlab", "wetwire", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "wetwire-core",
    "dataclass-dsl>=1.0.1",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.1a0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]
mcp = [
    "mcp>=1.0.0",
]
kiro = [
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
wetwire-gitlab = "wetwire_gitlab.cli:main"
wetwire-gitlab-mcp = "wetwire_gitlab.mcp_server:main"

[project.urls]
Homepage = "https://github.com/lex00/wetwire-gitlab-python"
Documentation = "https://github.com/lex00/wetwire-gitlab-python#readme"
Repository = "https://github.com/lex00/wetwire-gitlab-python"
Issues = "https://github.com/lex00/wetwire-gitlab-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wetwire_gitlab"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=wetwire_gitlab --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/wetwire_gitlab"]
omit = ["*/tests/*"]
